src/test/run-pass/return-nil.rs


fn f() { let x: () = (); return x; }

fn main() { let x = f(); }
