src/test/compile-fail/cast-to-nil.rs
// error-pattern: cast to nil: u32 as ()
fn main() { let u = 0u32 as (); }